2002-07-04  Yoshinori K. Okuji  <okuji@enbug.org>

	* docs/grub.texi (Reporting bugs): Use the group name (i.e.
	grub) instead of the group id (i.e. 68) for the URL of the BTS.

2002-07-03  Yoshinori K. Okuji  <okuji@enbug.org>

	* stage2/serial.c [!GRUB_UTIL] (inb): Added a delay into this
	function itself.
	[!GRUB_UTIL] (outb): Likewise.
	[!GRUB_UTIL] (serial_hw_put): Increase the timeout value, and
	don't call serial_hw_delay explicitly any longer.
	(fill_input_buf): Increase the maximum number of retries, reset
	the counter to zero after getting a valid character, and don't
	call serial_hw_delay explicitly any longer.

2002-07-03  Yoshinori K. Okuji  <okuji@enbug.org>

	* stage2/serial.c [!GRUB_UTIL] (serial_hw_fetch): Fixed a typo.
	Reported by Ilguiz Latypov.

2002-07-01  Yoshinori K. Okuji <okuji@enbug.org>

	* Makefile.am (AUTOMAKE_OPTIONS): New variable. Specify the
	required Automake version explicitly.
	
2002-06-30  Yoshinori K. Okuji <okuji@enbug.org>

	* stage2/builtins.c [SUPPORT_SERIAL || SUPPORT_HERCULES]
	(terminal_func): Set CURRENT_TERM to each of selected terminals
	before calling grub_printf, and restore CURRENT_TERM after it.
	Reported by Ilguiz Latypov.
	Prepend a carriage return to the prompting message, because it
	is ugly that the same messages fulfill the whole screen.

2002-06-30  Yoshinori K. Okuji  <okuji@enbug.org>

	* stage2/serial.c [!GRUB_UTIL] (serial_hw_fetch): Fixed the
	conditional statement. Reported by Ilguiz Latypov.
	
2002-06-24  Yoshinori K. Okuji  <okuji@enbug.org>

	* MAINTENANCE: New file.
	
2002-06-15  Yoshinori K. Okuji  <okuji@enbug.org>

	* stage2/disk_io.c [SUPPORT_NETBOOT] (GRUB): Defined.
	[SUPPORT_NETBOOT]: Include etherboot.h.
	[!STAGE1_5] (print_completions) [SUPPORT_NETBOOT]: When
	completing a disk name, if NETWORK_READY is true, add "nd" as a
	completion.
	
2002-06-15  Yoshinori K. Okuji  <okuji@enbug.org>

	* stage2/fsys_xfs.c (le32): Don't use bswap, but use xchgb and